Add auth and routes in project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "goit-react-hw-03-phonebook",
-  "homepage": "https://Sergey-Proskurnin.github.io/goit-react-hw-07-phonebook",
+  "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
