--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "gh-pages": "^3.2.0",
     "json-server": "^0.16.3",
+    "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
@@ -30,9 +31,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "api-server": "json-server --port 4040 --delay 300 --watch db.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
