--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint": "^7.28.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.1",
+    "pnotify": "^5.2.0",
     "prettier": "^2.3.2"
   },
   "lint-staged": {
